; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outWindowClause.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outWindowClause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"WINDOWCLAUSE\00", align 1
@name = common dso_local global i32 0, align 4
@refname = common dso_local global i32 0, align 4
@partitionClause = common dso_local global i32 0, align 4
@orderClause = common dso_local global i32 0, align 4
@frameOptions = common dso_local global i32 0, align 4
@startOffset = common dso_local global i32 0, align 4
@endOffset = common dso_local global i32 0, align 4
@startInRangeFunc = common dso_local global i32 0, align 4
@endInRangeFunc = common dso_local global i32 0, align 4
@inRangeColl = common dso_local global i32 0, align 4
@inRangeAsc = common dso_local global i32 0, align 4
@inRangeNullsFirst = common dso_local global i32 0, align 4
@winref = common dso_local global i32 0, align 4
@copiedOrder = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @_outWindowClause to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_outWindowClause(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = call i32 @WRITE_NODE_TYPE(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @name, align 4
  %7 = call i32 @WRITE_STRING_FIELD(i32 %6)
  %8 = load i32, i32* @refname, align 4
  %9 = call i32 @WRITE_STRING_FIELD(i32 %8)
  %10 = load i32, i32* @partitionClause, align 4
  %11 = call i32 @WRITE_NODE_FIELD(i32 %10)
  %12 = load i32, i32* @orderClause, align 4
  %13 = call i32 @WRITE_NODE_FIELD(i32 %12)
  %14 = load i32, i32* @frameOptions, align 4
  %15 = call i32 @WRITE_INT_FIELD(i32 %14)
  %16 = load i32, i32* @startOffset, align 4
  %17 = call i32 @WRITE_NODE_FIELD(i32 %16)
  %18 = load i32, i32* @endOffset, align 4
  %19 = call i32 @WRITE_NODE_FIELD(i32 %18)
  %20 = load i32, i32* @startInRangeFunc, align 4
  %21 = call i32 @WRITE_OID_FIELD(i32 %20)
  %22 = load i32, i32* @endInRangeFunc, align 4
  %23 = call i32 @WRITE_OID_FIELD(i32 %22)
  %24 = load i32, i32* @inRangeColl, align 4
  %25 = call i32 @WRITE_OID_FIELD(i32 %24)
  %26 = load i32, i32* @inRangeAsc, align 4
  %27 = call i32 @WRITE_BOOL_FIELD(i32 %26)
  %28 = load i32, i32* @inRangeNullsFirst, align 4
  %29 = call i32 @WRITE_BOOL_FIELD(i32 %28)
  %30 = load i32, i32* @winref, align 4
  %31 = call i32 @WRITE_UINT_FIELD(i32 %30)
  %32 = load i32, i32* @copiedOrder, align 4
  %33 = call i32 @WRITE_BOOL_FIELD(i32 %32)
  ret void
}

declare dso_local i32 @WRITE_NODE_TYPE(i8*) #1

declare dso_local i32 @WRITE_STRING_FIELD(i32) #1

declare dso_local i32 @WRITE_NODE_FIELD(i32) #1

declare dso_local i32 @WRITE_INT_FIELD(i32) #1

declare dso_local i32 @WRITE_OID_FIELD(i32) #1

declare dso_local i32 @WRITE_BOOL_FIELD(i32) #1

declare dso_local i32 @WRITE_UINT_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
